--- a/public/modules/extranet/css/front-style.css
+++ b/public/modules/extranet/css/front-style.css
@@ -9288,6 +9288,7 @@ header:first-child .row.row-header .right-part-header .menu {
   width: 40px;
   height: 40px;
   float: left;
+  margin-left: 230px;
 }
 
 header:first-child .row.row-header .right-part-header .user-info {
@@ -9404,7 +9405,6 @@ footer ul li a:hover {
 }
 
 .sidebar {
-  position: absolute;
   width: 100%;
   z-index: 100;
   overflow: hidden;
@@ -9415,6 +9415,11 @@ footer ul li a:hover {
   padding: 8px 0px 8px;
   height: 100%;
   min-height: calc(100vh - 174px);
+  position: fixed;
+  top: 62px;
+  left: 0;
+  bottom: 0;
+  overflow: auto;
 }
 
 .sidebar.collapsed {
@@ -9437,6 +9442,13 @@ footer ul li a:hover {
 
 .sidebar.initial {
   width: 0px !important;
+}
+
+.sidebar.initial .logo-container {
+  width: 230px;
+  height: 62px;
+  text-align: center;
+  padding: 0 25px;
 }
 
 .sidebar ul {
@@ -9540,7 +9552,14 @@ body.is-test {
 @media (min-width: 768px) {
   header:first-child .row.row-header .logo-container {
     width: 230px;
-    float: left;
+    height: 62px;
+    background-color: #fff;
+    text-align: center;
+    padding: 0 25px;
+    position: fixed;
+    left: 0;
+    top: 0;
+    z-index: 999;
   }
 
   header:first-child .row.row-header .logo-container.collapsed {
@@ -9591,11 +9610,11 @@ body.is-test {
 }
 
 .invalid-feedback {
-  border: 1px solid #8d1111;
   padding: 10px;
-  font-weight: 100;
-  background-color: #ecbebe;
+  font-weight: 400;
+  background-color: transparent;
   color: #aa1818;
+  text-align: center;
 }
 
 article.page-builder {
@@ -9605,6 +9624,17 @@ article.page-builder {
 @media (min-width: 91.42857143em) {
   article.page-builder {
     padding: 0 7%;
+  }
+}
+
+@media (max-width: 768px) {
+  .sidebar {
+    top: 125px;
+    width: 100%;
+  }
+
+  header:first-child .row.row-header .right-part-header .menu {
+    margin-left: unset;
   }
 }
 
@@ -10034,13 +10064,13 @@ form.contact-form .checkbox {
   border: 1px solid #DBDBDB;
 }
 
+.login-container .login-box-container .login-box .logo-container {
+  text-align: center;
+}
+
 .login-container .login-box-container .login-box form {
   border: none;
   padding: 0;
-}
-
-.login-container .login-box-container .login-box form .logo-container {
-  text-align: center;
 }
 
 .login-container .login-box-container .login-box form h2 {
@@ -11833,17 +11863,117 @@ body .container-car-field label.bottom:before {
   float: left;
 }
 
+.missing-documents-component {
+  background-color: #fff;
+  color: #2a3649;
+  border-radius: 12px;
+  padding-bottom: 40px;
+}
+
+.missing-documents-component .wrapper {
+  display: grid;
+  grid-template-columns: 25% 25% 25% 25%;
+  margin: 15px 0px 60px 0px;
+  grid-gap: 10px;
+  background-color: #fff;
+  color: #444;
+}
+
+.missing-documents-component .box {
+  background-color: #fff;
+  border-radius: 5px;
+  padding: 20px;
+  text-align: center;
+  height: 215px;
+}
+
+.missing-documents-component .box .text-file {
+  color: #69a8ff;
+  position: absolute;
+  bottom: 10px;
+  margin: auto;
+  left: 0;
+  right: 0;
+  padding: 0 10px;
+}
+
+.missing-documents-component .box .text-success {
+  color: #84e584;
+  position: absolute;
+  bottom: 10px;
+  margin: auto;
+  left: 0;
+  right: 0;
+  padding: 0 10px;
+}
+
+.missing-documents-component .box .icon-wrapper {
+  position: absolute;
+  top: 80px;
+  left: 0;
+  right: 0;
+  margin: auto;
+  bottom: 0;
+}
+
+.missing-documents-component .box .icon-wrapper i {
+  font-size: 2.5vw;
+}
+
+.missing-documents-component .box-state-01 {
+  border: 4px dotted #ccc;
+}
+
+.missing-documents-component .box-state-01 .icon-wrapper i {
+  color: #ccc;
+}
+
+.missing-documents-component .box-state-02 {
+  border: 1.5px solid #69a8ff;
+}
+
+.missing-documents-component .box-state-02 .icon-wrapper i {
+  color: #69a8ff;
+}
+
+.missing-documents-component .box-state-02 button {
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin: auto;
+  bottom: -48px;
+  width: 100%;
+  z-index: 300;
+  border: 1px solid #4372bc;
+  background-color: transparent;
+  color: #4372bc;
+}
+
+.missing-documents-component .box-state-02 .remove-btn {
+  padding: 3px 10px;
+  color: #e54542;
+}
+
+.missing-documents-component .box-state-03 {
+  border: 1.5px solid #c4e7c4;
+}
+
+.missing-documents-component .box-state-03 .icon-wrapper i {
+  color: #84e584;
+}
+
 .env-bar {
   background-color: #e84b36;
   color: #fff;
   width: 100%;
   height: 30px;
-  position: absolute;
+  position: fixed;
   top: 0px;
   left: 0px;
   z-index: 500;
   padding-left: 5px;
   line-height: 30px;
+  z-index: 1000;
 }
 
 .env-bar .envirnment-button {
