--- a/public/modules/extranet/css/front-style.css
+++ b/public/modules/extranet/css/front-style.css
@@ -11867,7 +11867,11 @@ body .container-car-field label.bottom:before {
   background-color: #fff;
   color: #2a3649;
   border-radius: 12px;
-  padding-bottom: 40px;
+  padding-bottom: 20px;
+}
+
+.missing-documents-component .documents-container .item-container {
+  margin-bottom: 53px;
 }
 
 .missing-documents-component .wrapper {
@@ -11941,12 +11945,13 @@ body .container-car-field label.bottom:before {
   left: 0;
   right: 0;
   margin: auto;
-  bottom: -48px;
+  bottom: -45px;
   width: 100%;
   z-index: 300;
   border: 1px solid #4372bc;
-  background-color: transparent;
+  background-color: #fff;
   color: #4372bc;
+  z-index: 20;
 }
 
 .missing-documents-component .box-state-02 .remove-btn {
