--- a/public/modules/extranet/css/front-style.css
+++ b/public/modules/extranet/css/front-style.css
@@ -12874,7 +12874,7 @@ body .react-table-container .ReactTable .rt-tbody .rt-tr-group .rt-td {
 .action-button-container {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.15);
   background-color: #fff;
-  min-height: 85px;
+  min-height: 68px;
   display: flex;
   margin-bottom: 15px;
   -webkit-transition: 0.8s;
@@ -12889,7 +12889,7 @@ body .react-table-container .ReactTable .rt-tbody .rt-tr-group .rt-td {
 }
 
 .action-button-container .container-icon i {
-  font-size: 1.5vw;
+  font-size: 20px;
   position: absolute;
   -webkit-transition: 0.8s;
 }
@@ -13146,6 +13146,14 @@ body .action-list-widget #actionList .action-list-container ul a.btn {
   align-items: center;
 }
 
+.typology-last .news .container-title a {
+  font-size: 16px;
+}
+
+.typology-last .news .container-title p {
+  font-size: 16px;
+}
+
 .typology-last .news .container-image {
   flex: 1;
   margin: auto;
@@ -13382,7 +13390,7 @@ body textarea.form-control:focus {
 
 .sidebar-last-posts .news {
   display: flex;
-  height: 80px;
+  height: 96px;
   margin: 15px 0px 15px;
   background-color: #fff;
   border-top-right-radius: 30px;
