--- a/public/modules/extranet/css/front-style.css
+++ b/public/modules/extranet/css/front-style.css
@@ -9449,6 +9449,20 @@ footer ul li a:hover {
   top: 10px;
 }
 
+.sidebar.collapsed .contact-sidebar .icon {
+  margin: unset;
+  width: 75px;
+  background-size: 35px;
+}
+
+.sidebar.collapsed .contact-sidebar .wrapper-content {
+  display: none;
+}
+
+.sidebar.collapsed .footer-menu-sidebar {
+  display: none;
+}
+
 .sidebar.collapsed .logo-container img {
   width: 100%;
 }
@@ -9661,10 +9675,42 @@ body.is-test {
   }
 
   .sidebar {
-    width: 230px;
+    width: 250px;
     height: 100%;
     min-height: calc(100vh - 62px);
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.15);
+  }
+
+  .sidebar .contact-sidebar {
+    position: fixed;
+    bottom: 120px;
+    width: 250px;
+  }
+
+  .sidebar .contact-sidebar .wrapper-content {
+    font-size: 14px;
+  }
+
+  .sidebar .contact-sidebar .wrapper-content .number {
+    font-size: 19px;
+  }
+
+  .sidebar .contact-sidebar .wrapper-content .number a {
+    color: #C9D200;
+  }
+
+  .sidebar .contact-sidebar .wrapper-content .text {
+    color: #668da0;
+  }
+
+  .sidebar .contact-sidebar .icon {
+    min-height: 70px;
+    float: left;
+    width: 70px;
+    background-image: url(/images/ico_tel.png?2a5336bd4eef5ad4ce69fc4df3afc3b0);
+    background-repeat: no-repeat;
+    background-position: center;
+    margin: 0px 10px;
   }
 
   .sidebar .btn-ham {
@@ -9738,7 +9784,43 @@ body.is-test {
   }
 
   .sidebar.initial {
-    width: 230px !important;
+    width: 250px !important;
+  }
+
+  .sidebar .footer-menu-sidebar {
+    position: absolute;
+    bottom: 30px;
+    width: 100%;
+  }
+
+  .sidebar .footer-menu-sidebar ul {
+    display: -webkit-inline-box;
+    padding-left: 19px;
+  }
+
+  .sidebar .footer-menu-sidebar ul .menu-item {
+    height: unset;
+    line-height: unset;
+    font-size: 14px;
+    padding-left: unset;
+  }
+
+  .sidebar .footer-menu-sidebar ul .menu-item:nth-child(2) {
+    padding-left: 5px;
+  }
+
+  .sidebar .footer-menu-sidebar ul .menu-item a {
+    color: #A8A8A8;
+    font-size: 14px;
+  }
+
+  .sidebar .footer-menu-sidebar ul .menu-item p {
+    color: #A8A8A8;
+    font-size: 14px;
+  }
+
+  .sidebar .footer-menu-sidebar ul .menu-item:hover {
+    border-left: white;
   }
 
   .menu-container {
@@ -9817,6 +9899,11 @@ article.page-builder {
 
   .sidebar .user-item span {
     width: 100% !important;
+  }
+
+  .sidebar .contact-sidebar,
+  .sidebar .footer-menu-sidebar {
+    display: none;
   }
 
   header:first-child .row.row-header .right-part-header .menu {
@@ -9932,12 +10019,53 @@ body .ui-widget.ui-widget-content {
   border-radius: 0px;
   height: calc(100% - 55px);
   padding-bottom: 65px;
+  margin: 0 auto;
 }
 
 .custom-modal .modal-content .container {
   overflow: scroll;
   height: 100%;
   padding: 20px 20px;
+}
+
+.custom-modal .modal-content.medium {
+  width: 100%;
+}
+
+@media (min-width: 52.85714286em) {
+  .custom-modal .modal-content.medium {
+    width: 70%;
+  }
+}
+
+@media (min-width: 91.42857143em) {
+  .custom-modal .modal-content.medium {
+    width: 50%;
+  }
+}
+
+.custom-modal .modal-content.medium-large {
+  width: 80%;
+}
+
+.custom-modal .modal-content.large {
+  width: 100%;
+}
+
+.custom-modal .modal-content.small {
+  width: 100%;
+}
+
+@media (min-width: 52.85714286em) {
+  .custom-modal .modal-content.small {
+    width: 50%;
+  }
+}
+
+@media (min-width: 91.42857143em) {
+  .custom-modal .modal-content.small {
+    width: 30%;
+  }
 }
 
 .custom-modal .modal-footer {
@@ -12607,7 +12735,17 @@ body .react-table-container .ReactTable .rt-tbody .rt-tr-group .rt-td {
 .image_text_link .container-image-text-link .container-description {
   padding: 0px 25px;
   line-height: 25px;
-  min-height: 80px;
+  overflow: hidden;
+  text-overflow: -o-ellipsis-lastline;
+  text-overflow: ellipsis;
+  display: block;
+  /* autoprefixer: off */
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  max-height: 90px;
+  word-break: break-word;
+  white-space: initial;
 }
 
 .image_text_link .container-image-text-link .container-link {
@@ -12618,6 +12756,10 @@ body .react-table-container .ReactTable .rt-tbody .rt-tr-group .rt-td {
 
 #imageTextLinkList {
   margin-bottom: 30px;
+}
+
+#imageTextLinkList .slick-slider .slick-slide {
+  height: 430px;
 }
 
 #imageTextLinkList .slick-slider button {
@@ -12711,9 +12853,10 @@ body .react-table-container .ReactTable .rt-tbody .rt-tr-group .rt-td {
   display: -webkit-box;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
-  max-height: 90px;
+  max-height: 40px;
   word-break: break-word;
   white-space: initial;
+  min-height: 60px;
 }
 
 .ImageTextTitleDocuments .container-image-text-title-documents .container-description {
@@ -12747,7 +12890,6 @@ body .react-table-container .ReactTable .rt-tbody .rt-tr-group .rt-td {
   width: 100%;
   text-transform: unset;
   transition: 0.5s;
-  position: absolute;
   overflow: hidden;
   text-overflow: -o-ellipsis-lastline;
   text-overflow: ellipsis;
@@ -12775,7 +12917,22 @@ body .react-table-container .ReactTable .rt-tbody .rt-tr-group .rt-td {
 }
 
 .ImageTextTitleDocuments .container-image-text-title-documents .container-image a.btn-primary {
-  padding: 10px 12px;
+  padding: 10px 12px 10px 40px;
+}
+
+.ImageTextTitleDocuments .container-image-text-title-documents .container-image a.btn-primary h5 {
+  margin: 0;
+  overflow: hidden;
+  text-overflow: -o-ellipsis-lastline;
+  text-overflow: ellipsis;
+  display: block;
+  /* autoprefixer: off */
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  max-height: 38px;
+  word-break: break-word;
+  white-space: initial;
 }
 
 .ImageTextTitleDocuments .container-image-text-title-documents .container-image a.btn-primary img {
@@ -12791,6 +12948,10 @@ body .react-table-container .ReactTable .rt-tbody .rt-tr-group .rt-td {
   margin-bottom: 20px;
   text-transform: unset;
   transition: 0.5s;
+}
+
+.ImageTextTitleDocuments .buttons-group a h5 {
+  margin: 0;
   overflow: hidden;
   text-overflow: -o-ellipsis-lastline;
   text-overflow: ellipsis;
@@ -12834,6 +12995,7 @@ body .react-table-container .ReactTable .rt-tbody .rt-tr-group .rt-td {
 
 .page-builder .horizontal-banner {
   -webkit-transition: 0.8s;
+  min-height: 152px;
 }
 
 .page-builder .horizontal-banner .image-static-banner img {
@@ -12850,8 +13012,25 @@ body .react-table-container .ReactTable .rt-tbody .rt-tr-group .rt-td {
   }
 }
 
+.page-builder .horizontal-banner .wrapper-arrow {
+  min-height: 152px;
+  background-image: url(/images/geo_arrow-right.png?7bfb4e61a73a8a8c18ed61e84ed2832d);
+  background-position: 97% 50%;
+  background-repeat: no-repeat;
+}
+
 .page-builder .horizontal-banner .text-static-banner {
   padding-left: 0;
+  height: 100%;
+  position: absolute;
+  right: 0;
+}
+
+.page-builder .horizontal-banner .text-static-banner .wrapper-banner {
+  position: relative;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  left: 50%;
 }
 
 .page-builder .horizontal-banner .text-static-banner p,
@@ -13082,7 +13261,7 @@ body .react-table-container .ReactTable .rt-tbody .rt-tr-group .rt-td {
 }
 
 .simple-button-container .simple-btn {
-  padding: 9px 25px;
+  padding: 12px 30px;
   font-size: 14px;
   line-height: 16px;
   font-weight: 400;
@@ -13093,6 +13272,7 @@ body .react-table-container .ReactTable .rt-tbody .rt-tr-group .rt-td {
 body .action-list-widget #actionList .action-list-container {
   display: flex;
   justify-content: center;
+  border-left: 1px solid #E6E6E6;
 }
 
 body .action-list-widget #actionList .action-list-container.open .btn-action {
@@ -13228,6 +13408,7 @@ body .action-list-widget #actionList .action-list-container ul a.btn {
   padding: 0px 25px 0px 10px;
   margin-right: 16px;
   margin-left: 0px;
+  padding: 2px 5px 2px 15px !important;
 }
 
 .container-radio-field .MuiFormGroup-root .MuiFormControlLabel-root .Mui-checked {
