--- a/public/modules/architect/css/app.css
+++ b/public/modules/architect/css/app.css
@@ -8293,6 +8293,25 @@ button.close {
   }
 }
 
+.icon {
+  display: inline-block;
+  width: 1em;
+  height: 1em;
+  stroke-width: 0;
+  stroke: currentColor;
+  fill: currentColor;
+  position: relative;
+  top: 1px;
+}
+
+.creatic-geo_arrow-right {
+  width: 0.5263671875em;
+}
+
+.creatic-illu_geolocalisation {
+  width: 1.306640625em;
+}
+
 /*!
 
  =========================================================
